--- a/ClasesP.~cpp.u1conflict.1
+++ b/ClasesP.~cpp.u1conflict.1
@@ -85,18 +85,18 @@ void Paciente::buscarCI(String ci){
 int Paciente::edad(int fNac){
   int f = Date().CurrentDate();
   return (f-fNac)/365.25 ;
-} 
+}
 
 String Paciente::datosCita(int i, int j){
     return ListPac->listPac->Cells[i][j];
 }
 
 
-String Paciente::contadorPorMes(String f)
+String Paciente::contadorPorMes(String mes)
 {
   int i=1, j, may=0, cant=0;
   String ci, ci1, ci2, ci3="", nom;
-  String mes=f.SubString(4,2);
+  
   int a=ListPac->listPac->RowCount;
   int b=ListPac->listMes->RowCount;
 
@@ -130,7 +130,7 @@ String Paciente::contadorPorMes(String f)
         "\nCon #"+may+" citas";
 
   if(ci==""){
-    return "No hay Registros";
+    return "No hay Registros para el mes "+mes;
   }else{
     return datos;
   }
@@ -237,8 +237,7 @@ Reporte::Reporte(){
   z=0;
 }
 
-void Reporte::organizarMes(String f){
-  String mes = f.SubString(4,2);
+void Reporte::organizarMes(String mes){
   String fc;
   String ciC, ciP, nom, ape;
   int a=ListPac->listCitas->RowCount;
@@ -284,8 +283,7 @@ void Reporte::ingresarListMes(String ci, String nom, String ape, int n){
 
 
 
-String Paciente::datosPac(String ci)
-{
+String Paciente::datosPac(String ci){
   int i=1;
   String dato="";
 
@@ -310,4 +308,77 @@ void Reporte::limpiarM()
                 }
         }
 
+}
+
+String Reporte::numMes(int i)
+{
+        switch(i){
+          case 0: return "01";break;
+          case 1: return "02";break;
+          case 2: return "03";break;
+          case 3: return "04";break;
+          case 4: return "05";break;
+          case 5: return "06";break;
+          case 6: return "07";break;
+          case 7: return "08";break;
+          case 8: return "09";break;
+          case 9: return "10";break;
+          case 10: return "11";break;
+          case 11: return "12";break;
+        }
+}
+
+String Reporte::datosPac(String ci){
+  int i=1;
+  String dato="";
+
+  while(i<ListPac->listPac->RowCount){
+
+    if(ci==ListPac->listPac->Cells[1][i]){
+      dato = ListPac->listPac->Cells[3][i]+", "+ListPac->listPac->Cells[2][i];
+    }
+    i++;
+  }
+  return dato;
+}
+
+int Reporte::edad(int fNac){
+  int f = Date().CurrentDate();
+  return (f-fNac)/364.25 ;
+}
+
+String Reporte::mayorEdad(){
+  int may=0, cont, i=1, j, e, cit=0;
+  String ci, ci1, ci2, nom, dato;
+  int a= ListPac->listPac->RowCount;
+  int b= ListPac->listCitas->RowCount;
+  if(ListPac->listPac->Cells[1][1]!=""){
+    while(i<a){
+      ci1 = ListPac->listCitas->Cells[1][i];
+      ShowMessage(ListPac->listPac->Cells[7][i]);
+      e = edad(TDateTime(ListPac->listPac->Cells[7][i]));
+      j=1;
+      cont=0;
+      while(j<b){
+        ci2 = ListPac->listCitas->Cells[1][j];
+        if(ci2==ci1){
+          cont++;
+        }
+        j++;
+      }
+      if(e>may&&cont>cit){
+        ci=ci1;
+        nom=datosPac(ci);
+        may=e;
+        cit=cont;
+      }
+    i++;
+    }
+    dato = "La persona de mayor edad con mayor cantidad de citas es:\n  C.I.:\t\t"
+          +ci+"\n  Nombre:\t"+nom+"\n  Edad:\t"+may+"\nCon un total de "+cit+" citas.";
+  }else{
+    dato = "No hay datos...";
+  }
+
+  return dato;
 }
